--- a/App/frontend/package.json
+++ b/App/frontend/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.1.8",
     "eas-cli": "^16.20.0",
     "expo": "~54.0.12",
+  "expo-auth-session": "~6.0.2",
     "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.13",
     "expo-font": "~14.0.8",
